# objdet

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.serve  Dockerfile.train  GEMINI.md  LICENSE  Makefile  README.md  What are the differences between gradio and stream.md  cliff.toml  docker-compose.yml  pyproject.toml  repo_features_and_requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci-webapp.yml  ci.yml  sonarqube.yml
.gitlab/ci/: docs.yml  lint.yml  release.yml  test.yml
.sonarlint/: connectedMode.json
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  tasks.py
backend/api/: mlflow.py  system.py  training.py
backend/core/: config.py
backend/models/: mlflow.py  training.py
backend/services/: celery_service.py  mlflow_service.py
configs/experiment/: faster_rcnn_litdata.yaml  retinanet_coco.yaml  yolov8_coco.yaml  yolov8_litdata.yaml
configs/model/: retinanet.yaml
deploy/: Dockerfile.serve  Dockerfile.train  README.md  docker-compose.yml  webapp-docker-compose.yml
deploy/docker/: backend.Dockerfile  ml.Dockerfile  mlflow.Dockerfile
docs/: conf.py  index.md
docs/api/: data.md  inference.md  models.md  pipelines.md  serving.md  training.md
docs/getting_started/: configuration.md  installation.md  quickstart.md
docs/user_guide/: data.md  deployment.md  inference.md  models.md  testing.md  training.md
frontend/: Dockerfile  README.md  container-structure-test.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/docs/api/: README.md
frontend/src/: App.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Input.test.jsx  ProgressBar.jsx  Select.jsx  StatCard.jsx  StatusBadge.jsx  StatusBadge.test.jsx
frontend/src/mocks/: handlers.js
frontend/src/pages/: Effects.jsx  Models.jsx  SyntheticData.jsx
ml/: README.md
ml/configs/experiment/: faster_rcnn_coco.yaml  retinanet_litdata.yaml  yolov11_coco.yaml  yolov11_litdata.yaml
ml/configs/model/: faster_rcnn.yaml  yolov11.yaml  yolov8.yaml
ml/configs/serving/: default.yaml
ml/src/objdet/: __init__.py  __main__.py  cli.py  version.py
ml/src/objdet/core/: constants.py  exceptions.py  registry.py  types.py
ml/src/objdet/inference/: __init__.py  predictor.py  sahi_wrapper.py
ml/src/objdet/models/: __init__.py  base.py
ml/src/objdet/optimization/: export.py
ml/src/objdet/pipelines/: __init__.py  celery_app.py  job.py  sdk.py  tasks.py
ml/src/objdet/serving/: api.py
ml/src/objdet/tuning/: optuna_tuner.py  search_space.py
src/objdet/: cli.py
src/objdet/core/: __init__.py  constants.py  exceptions.py  logging.py  types.py
src/objdet/data/: __init__.py  base.py  class_mapping.py  registry.py
src/objdet/data/formats/: __init__.py  litdata.py  yolo.py
src/objdet/data/transforms/: __init__.py
src/objdet/inference/: __init__.py  predictor.py  sahi_wrapper.py
src/objdet/models/: __init__.py  base.py  registry.py
src/objdet/models/ensemble/: __init__.py  base.py  nms.py  wbf.py
src/objdet/models/torchvision/: __init__.py  faster_rcnn.py  retinanet.py
src/objdet/models/yolo/: __init__.py  base.py  yolov8.py  (+1 more)
src/objdet/optimization/: __init__.py  export.py
src/objdet/pipelines/: __init__.py  celery_app.py  job.py  sdk.py  tasks.py
src/objdet/serving/: __init__.py  api.py  server.py
src/objdet/training/: __init__.py
src/objdet/tuning/: __init__.py  optuna_tuner.py  search_space.py
tests/: README.md  conftest.py
tests/backend/tests/: conftest.py
tests/functional/: __init__.py  conftest.py  test_cli_inference.py  test_cli_preprocessing.py  test_cli_training.py
tests/integration/: conftest.py  test_callbacks.py  test_cli.py  test_export.py  test_serving.py  test_training.py
tests/ml/integration/: test_cli.py  test_export.py
tests/ml/unit/: test_cli.py
tests/unit/mocks/: mock_ultralytics.py
tests/unit/test_core/: test_logging.py
tests/unit/test_data/: test_base.py  test_class_mapping.py  test_predict.py  test_transforms.py  test_voc.py
tests/unit/test_inference/: __init__.py  test_predictor.py  test_sahi_wrapper.py
tests/unit/test_models/: test_ensemble.py  test_yolo_base.py
tests/unit/test_pipelines/: __init__.py  test_job.py  test_sdk.py  test_tasks.py
tests/unit/test_serving/: test_serving_api.py
tests/unit/test_training/: test_classwise_ap.py  test_confusion_matrix_metric.py
tests/unit/test_tuning/: test_optuna_tuner.py  test_search_space.py
webapp/: .env.example  README.md  docker-compose.yml
webapp/backend/: .dockerignore  Dockerfile  celery_app.py  main.py  pyproject.toml
webapp/backend/api/: training.py
webapp/backend/core/: config.py
webapp/backend/services/: celery_service.py  mlflow_service.py
webapp/backend/tests/: conftest.py
webapp/backend/tests/integration/: test_integration.py
webapp/backend/tests/unit/: test_mlflow_models.py  test_system_api.py  test_tasks.py  test_training_api.py
webapp/frontend/: Dockerfile  app.py  nginx.conf  package-lock.json  pyproject.toml
webapp/frontend-react/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  playwright.config.js
webapp/frontend-react/e2e/: models.spec.js  navigation.spec.js
webapp/frontend-react/src/: index.css  setupTests.js
webapp/frontend/.streamlit/: config.toml
webapp/frontend/api/: client.py
webapp/frontend/components/: job_monitor.py  metrics_chart.py  status_badge.py
webapp/frontend/docs/api/: hoppscotch-collection.json
webapp/frontend/pages/: 2_🧠_Models.py  3_⚡_Effects.py  4_📦_Synthetic_Data.py  5_🎬_SceneForge.py  6_📁_Loadset.py
webapp/frontend/src/api/: client.js
webapp/frontend/src/components/ui/: Button.test.jsx  Card.jsx
webapp/frontend/src/pages/: Home.jsx  Loadset.jsx  SceneForge.jsx
webapp/frontend/tests/: conftest.py
webapp/frontend/tests/unit/: test_client.py  test_job_monitor.py  test_metrics_chart.py  test_status_badge.py
webapp/frontend/utils/: formatting.py  session.py
(+81 files in other folders)
