[project]
name = "objdet-webapp-frontend"
version = "0.1.0"
description = "Streamlit frontend for ObjDet web application"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "polars>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "streamlit-autorefresh>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
